samples/_failures_safe/1761609249_8f3621_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be3bf0a5.c: In function ‘main’:
./samples/SAFE/__tmp_be3bf0a5.c:139:5: error: expected expression at end of input
  139 |     printf("Decompressed: %.*s\n", (int)decompressed.size,
      |     ^~~~~~
./samples/SAFE/__tmp_be3bf0a5.c:139:5: error: expected declaration or statement at end of input
